# ClickHouseAPI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PHASE2-4_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  docker.yml  feature_request.md  lint.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
.farhad/: 1-DOCUMENTATION_README.md  2-INDEX.md  4-ARCHITECTURE_v2.md  5-PHASE1_DETAILED.md  6-PHASE2-4_OVERVIEW.md
app/: __init__.py  config.py  main.py
app/core/: __init__.py  database.py  exceptions.py  logging_config.py
app/middleware/: __init__.py
app/models/: __init__.py  request.py  response.py
app/routers/: __init__.py  health.py  ohlcv.py
app/utils/: __init__.py  time_parser.py
docs/: 0-START_HERE.md  3-QUICK_REFERENCE.md  API.md  DEVELOPMENT.md  EXAMPLES.md
middleware/: logging.py
scripts/: init-db.sql
tests/: conftest.py  test_health.py  test_models.py  test_ohlcv_api.py  test_time_parser.py
